deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testpay
  namespace: testpay
spec:
  type: ClusterIP
  selector: { app: testpay }
  ports:
    - port: 80
      targetPort: 7700
      name: http
